# BallNBricks

./: .gitignore  CMakeLists.txt  Makefile  README
BallsNBricks/: .gitignore  Makefile  Makefile.linux  README  level1.txt
BallsNBricks/include/game/: Ball.h  Brick.h  Collidable.h  Critter.h  Game.h  GameObject.h  GameObjectsManager.h  Level.h  LevelLoader.h  MovingObject.h  Paddle.h  ResourceManager.h  gameinfo.h  gamestate.h
BallsNBricks/src/: BallsNBricks.cpp
BallsNBricks/src/game/: Ball.cpp  Critter.cpp  Game.cpp  GameObject.cpp  GameObjectsManager.cpp  Level.cpp  LevelLoader.cpp  Paddle.cpp
include/game/: Ball.h  Collidable.h  GameObject.h  GameObjectsManager.h  LevelLoader.h  MovingObject.h  ResourceManager.h  gamestate.h
src/: BallsNBricks.cpp
src/game/: Ball.cpp  Brick.cpp  Critter.cpp  Game.cpp  GameObjectsManager.cpp  LevelLoader.cpp  Paddle.cpp
